# Demi

./: .gitignore  11.demi  Cargo.toml  Demi.rc  Demi.sln  Demi.vcxproj  Demi.vcxproj.filters  README.md  Snapshoot2017.rar  amounts.cpp  amounts.h  app.cpp  app.h  build.rs  demi.demi  demi.toml  demi2.demi  demi_time.cpp  demi_time.h  earth.cpp  earth.h  gene.cpp  gene.h  genotypes_tree.cpp  genotypes_tree.h  local_coord.cpp  local_coord.h  model_render.cpp  model_render.h  msg_boxes.cpp  msg_boxes.h  organism.cpp  organism.h  precomp.cpp  precomp.h  reactions.h  resource.h  settings_storage.cpp  settings_storage.h  string_resources.cpp  (+11 more)
Old cpp/: Demi.vcxproj.filters  amounts.cpp  amounts.h  app.cpp  app.h  demi_time.cpp  demi_time.h  earth.cpp  earth.h  gene.cpp  gene.h  genotypes_tree.cpp  genotypes_tree.h  local_coord.cpp  local_coord.h  model_render.cpp  model_render.h  msg_boxes.cpp  msg_boxes.h  organism.cpp  organism.h  precomp.cpp  precomp.h  reactions.h  settings_storage.cpp  settings_storage.h  tree_view.cpp  tree_view.h  windows_settings.h  world.cpp  world.h
Theme/: theme.cpp  theme.h  theme_views.cpp  theme_views.h
ThemeAero/: settings.xml  settings.xml.bak  template.demi  template.demi.bak
res/: app.rc
src/: chemical.rs  dot.rs  elements_control.rs  environment.rs  evolution.rs  filter_control.rs  genes.rs  geom.rs  grid.rs  main.rs  organism.rs  project.rs  project_controls.rs  project_toml.rs  reactions.rs  resources.rs  style.rs  update_rate.rs  world.rs
