[package]
name = "demi"
version = "0.1.4"
authors = ["Artem Khomenko <_mag12@yahoo.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { path = "../iced",  features = ["advanced", "canvas", "tokio", "image", "lazy"] }
# iced = { version = "0.13.2",  features = ["canvas", "tokio", "image", "lazy"] }

itertools = "0.14.0"
rustc-hash = "2.1.1"
serde = "1.0.219"
serde_derive = "1.0.219"
rand = "0.9.2"
rayon = "1.10.0"
toml = "0.9.8"
euclid = "0.22.11"
# euclid = { path = "../euclid" }
iif = "1.2.1"
bytes = "1.11.0"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.2"
